rework / fix length and height string value parser in ModelUtil
the previous patch to account for km, dm, cm units was erroneous,
it lacked break; declarations within switch block, which meant
"km", "dm", "cm" were always normalized like "mm".

the switch block was fixed and feet / inch value parsing is now
handled the same way, making the code more readable